добавлен каталог и информация о пользователе
